2003-02-20  Yoshinori K. Okuji  <okuji@enbug.org>

	* util/grub-install.in (find_device): Fix the sed script.

2003-02-17  Yoshinori K. Okuji  <okuji@enbug.org>

	* lib/device.c (check_device): If DEVICE is empty, just return
	1.
	(get_scsi_disk_name) [__QNXNTO__]: Make NAME empty, because SCSI
	disks are detected as IDE disks on QNX RTP.

	From Taketo Kabe <kabe@sra-tohoku.co.jp>:
	* lib/device.c (get_ide_disk_name) [__QNXNTO__]: Set NAME to
	"/dev/hdX".
	(get_floppy_disk_name) [__QNXNTO__]: Set NAME to "/dev/fdX".
	* stage2/mb_info.h (struct AddrRangeDesc): Specified with the
	attribute packed.
	* stage2/shared.h (struct mmar_desc): Likewise.

2003-01-29  Yoshinori K. Okuji  <okuji@enbug.org>

	From Ilguiz Latypov:
	* configure.in: Fix a syntax error in a sed script.
	* stage2/bios.c (get_diskinfo): PhoenixBIOS 4.0 Revision 6.0 
	for ZF Micro might understand the greater buffer size for the
	"get drive parameters" int 0x13 call in its own way.  
	Supposedly the BIOS assumes even bigger space is available and
	thus corrupts the stack.  This is why we specify the exactly 
	necessary size of 0x42 bytes.

2003-01-25  Yoshinori K. Okuji  <okuji@enbug.org>

	From Steven Dick <ssd.gnu@mmae.ucf.edu>:
	* stage2/pc_slice.h (PC_SLICE_TYPE_DELL_UTIL): New macro.
	(IS_PC_SLICE_TYPE_FAT): Recognize PC_SLIDE_TYPE_DELL_UTIL as
	well.

2003-01-25  Yoshinori K. Okuji  <okuji@enbug.org>

	From Karsten Scheibler <karsten.scheibler@student.uni-halle.de>:
	* stage2/terminfo.c (term): Don't use a C99-style initializer.

2003-01-16  Yoshinori K. Okuji  <okuji@enbug.org>

	From H.J. Lu <hjl@gnu.org>:
	* stage2/disk_io.c (part_start): Use unsigned long to support
	large disks.
	(part_length): Likewise.
	* stage2/shared.h (part_start): Likewise.
	(part_length): Likewise.

2003-01-05  Yoshinori K. Okuji  <okuji@enbug.org>

	* configure.in (CFLAGS): When the default CFLAGS is used,
	eliminate -O2 and -g from CFLAGS, because Autoconf may
	automatically set CFLAGS to them.
