@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.23.
-.TH GRUB "8" "February 2003" "grub (GNU GRUB 0.93)" FSF
+.TH GRUB "8" "March 2003" "grub (GNU GRUB 0.93)" FSF
 .SH NAME
 grub \- the grub shell
 .SH SYNOPSIS
